remame sound defines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ endforeach()
 add_library(sound_engine ${SRC_ALL})
 
 if(WIN32)
-	add_definitions(-DX2AUDIO_SOUND)
+	add_definitions(-DSOUND_X2AUDIO)
 elseif(UNIX)
 
 	find_package(OpenAL REQUIRED)
@@ -52,13 +52,13 @@ elseif(UNIX)
 			${OPENAL_LIBRARY}
 		)
 		
-		add_definitions(-DOPENAL_SOUND)
+		add_definitions(-DSOUND_OPENAL)
 	else()
 		message("can't find OpenAL library")
 	endif()
 
 else()
-	add_definitions(-DDUMMY_SOUND)
+	add_definitions(-DSOUND_DUMMY)
 endif()
 
 #executable
